...
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				tools:context="au.com.pactera.pacterapulse.fragment.ResultFragment">

	<RadioGroup
		android:id="@+id/actions"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">

		<RadioButton
...
			style="@style/Button.ActionButton"
			android:tag="30days"
			android:text="@string/one_month"/>
	</RadioGroup>

	<au.com.pactera.pacterapulse.chart.EmotionBarChartView
		android:id="@+id/chartView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/actions"/>

	<ProgressBar
		android:id="@+id/progressBar"
...
