<!--
  ~ Copyright (c) 2015 Pactera. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ THIS CODE IS PROVIDED AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS
  ~ OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION
  ~ ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A
  ~ PARTICULAR PURPOSE, MERCHANTABILITY OR NON-INFRINGEMENT.
  ~
  ~ See the Apache License, Version 2.0 for the specific language
  ~ governing permissions and limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  tools:context=".MainActivity">
	<item
		android:id="@+id/action_showResults"
		android:icon="@android:drawable/ic_menu_info_details"
		android:orderInCategory="100"
		android:showAsAction="always"
		android:title="@string/action_results"/>
	<item
		android:id="@+id/action_settings"
		android:icon="@android:drawable/ic_menu_manage"
		android:orderInCategory="101"
		android:showAsAction="never"
		android:title="@string/action_settings"
		android:visible="false"/>
</menu>
